Mention GIt Sha ID in the comment.
The CI job might be run multiple times generating more than one comment

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -62,6 +62,7 @@ jobs:
       - uses: mshick/add-pr-comment@v2
         with:
           message: |
+            Commit ${{env.GITHUB_SHA}}
             ```
             ${{env.COVERAGE_INFO}}
             ```
