--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   merge-request-checks:
-    name: Run
+    name: Run verify.sh
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
