--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -43,7 +43,7 @@ tikv-jemallocator = "0.5"
 
 [dev-dependencies]
 pretty_assertions = "1.3"
-
+insta = { version = "1.34.0", features = ["filters"] }
 
 [package.metadata.cargo-machete]
 ignored = ["libsqlite3-sys"]
