--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -36,7 +36,7 @@ lru = "0.7"
 memory-stats = "1.1.0"
 page_size = "0.4"
 percent-encoding = "2.1"
-rand = { version = "0.8", features = ["small_rng"] }
+rand = { version = "0.9", features = ["small_rng"], default-features = false }
 rayon = { version = "1.3", default-features = false }
 regex = "1"
 regex-syntax = "0.8"
