Add Facet derive to AnnoKey

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ version = "3.8.3"
 binary-layout = "4.0.1"
 bincode = "1.2"
 clru = "0.6.1"
+facet = "0.28.0"
 itertools = "0.10"
 lazy_static = "1.4"
 log = "0.4"
