--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,7 @@ binary-layout = "4.0.1"
 bincode = "1.2"
 clru = "0.6.1"
 facet = "0.28.0"
+facet-reflect = "0.28.0"
 itertools = "0.10"
 lazy_static = "1.4"
 log = "0.4"
