introduce dependency on time

--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -50,6 +50,7 @@ strum_macros = "0.21"
 sys-info = "0.9"
 tempfile = "3"
 thiserror = "1"
+time = "0.3.44"
 toml = "0.8"
 transient-btree-index = "0.5"
 zip = "0.6.4"
