--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -34,6 +34,7 @@ serde_derive = "1.0"
 simplelog = "0.12"
 tempfile = "3"
 thiserror = "1"
+time = "0.3.44"
 uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2"
 zip = "0.6.4"
